Prevents history navigation items from being voice-over selectable while not visible.

Removing accessibility traits for these navigation items or disabling them, didn't
prevent them from being voice-over selectable while not visible due to the search bar
being presented on top.

Setting the view's accessibilityViewIsModal to YES fixed the problem but prevented
the history results from being voice-over selectable.

For these reasons the current approach was used.

BUG=674891

Review-Url: https://codereview.chromium.org/2605023002
Cr-Commit-Position: refs/heads/master@{#441672}

Former-commit-id: c0d82cf0179b873629fb2cbf2c253e9edc591920